labs/07-ingress/app-bar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo:1.0
        args: ["-text=hello from BAR"]
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: bar
spec:
  selector:
    app: bar
  ports:
  - port: 80
    targetPort: 5678
